--- a/_config.yml
+++ b/_config.yml
@@ -19,11 +19,11 @@ analytics: UA-83979019-1
 disqus-shortname: webjeda-demo
 
 # Color schemes
-color-1: '#3B97D3'
-color-2: '#26B99A'
+color-1: '#00a7df'
+color-2: '#c0392b'
 
 # Author pictre 100x100 --> keep it inside img folder.
-author-image: 'author.jpg'
+author-image: '<img src="/static/images/logo.30efce685dc1.png" alt="">'
 author-name: 'John Doe' 
 author-about: 'John Doe should be described in a very few words!' 
 
@@ -52,7 +52,7 @@ prose:
   rooturl: ''
   siteurl: 'http://prose.github.io/starter/'
   relativeLinks: 'http://prose.github.io/starter/links.jsonp'
-  media: 'images'
+  media: '<img src="/static/images/logo.30efce685dc1.png" alt="">'
   ignore:
     - index.md
     - _config.yml
