--- a/_config.yml
+++ b/_config.yml
@@ -19,13 +19,13 @@ analytics: UA-83979019-1
 disqus-shortname: webjeda-demo
 
 # Color schemes
-color-1: '#00a7df'
-color-2: '#c0392b'
+color-1: #00a7df
+color-2: #c0392b
 
 # Author pictre 100x100 --> keep it inside img folder.
-author-image: '<img src="/static/images/logo.30efce685dc1.png" alt="">'
-author-name: 'John Doe' 
-author-about: 'John Doe should be described in a very few words!' 
+author-image: <img src="/static/images/logo.30efce685dc1.png" alt="">
+author-name: Kimetrica
+author-about: For all your code dumping needs!
 
 # Build settings
 markdown: kramdown
